<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TrainingSelectionFragment">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/ImageButton"
        android:layout_marginStart="@dimen/margin_img_btn"
        android:src="@drawable/ic_baseline_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:text="@string/training_selection_title"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/Subtitle"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:text="@string/training_selection_description"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/btn_left_hand"
        style="@style/Button"
        android:text="@string/btn_left_hand"
        app:layout_constraintBottom_toTopOf="@id/btn_right_hand"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <Button
        android:id="@+id/btn_right_hand"
        style="@style/Button"
        android:text="@string/btn_right_hand"
        app:layout_constraintBottom_toTopOf="@id/btn_both_hands"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_left_hand" />

    <Button
        android:id="@+id/btn_both_hands"
        style="@style/Button"
        android:text="@string/btn_both_hands"
        app:layout_constraintBottom_toTopOf="@id/btn_t_pose"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_right_hand" />

    <Button
        android:id="@+id/btn_t_pose"
        style="@style/Button"
        android:text="@string/btn_t_pose"
        app:layout_constraintBottom_toTopOf="@id/btn_squat"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_both_hands" />

    <Button
        android:id="@+id/btn_squat"
        style="@style/Button"
        android:text="@string/btn_squat"
        app:layout_constraintBottom_toTopOf="@id/btn_random"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_t_pose" />

    <Button
        android:id="@+id/btn_random"
        style="@style/Button"
        android:text="@string/btn_random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_squat" />

</androidx.constraintlayout.widget.ConstraintLayout>