<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/ImageButton"
        android:layout_marginStart="@dimen/margin_img_btn"
        android:src="@drawable/ic_baseline_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:text="@string/comp_selection_title"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/Subtitle"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:text="@string/comp_selection_description"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/btn_easy"
        style="@style/Button"
        app:layout_constraintBottom_toTopOf="@id/btn_medium"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        tools:text="@string/comp_btn_easy" />

    <Button
        android:id="@+id/btn_medium"
        style="@style/Button"
        app:layout_constraintBottom_toTopOf="@id/btn_hard"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_easy"
        tools:text="@string/comp_btn_medium" />

    <Button
        android:id="@+id/btn_hard"
        style="@style/Button"
        app:layout_constraintBottom_toTopOf="@id/tv_description_slider"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_medium"
        tools:text="@string/comp_btn_hard" />

    <TextView
        android:id="@+id/tv_description_slider"
        style="@style/Subtitle"
        android:text="@string/comp_length"
        app:layout_constraintBottom_toTopOf="@id/length_slider"
        app:layout_constraintEnd_toEndOf="@id/length_slider"
        app:layout_constraintStart_toStartOf="@id/length_slider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/length_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hard"
        app:thumbRadius="8dp"
        app:tickColor="@color/black"
        app:trackColorInactive="@color/settings_slider_track"
        app:trackColorActive="@color/settings_slider_thumb"
        app:thumbColor="@color/settings_slider_thumb"
        app:tickVisible="true"
        app:trackHeight="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>