<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_intro"
    tools:context=".ui.fragments.IntroFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="@dimen/margin_sides"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_sides"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_intro_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tv_intro_title"
        android:textAllCaps="true"
        android:textSize="@dimen/size_title"
        app:layout_constraintBottom_toTopOf="@id/tv_intro_body"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_intro_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/tv_intro_body"
        android:textSize="@dimen/size_body"
        app:layout_constraintBottom_toTopOf="@id/btn_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_title" />

    <Button
        android:id="@+id/btn_start_guide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_start_guide"
        android:textSize="@dimen/size_button"
        app:layout_constraintBottom_toTopOf="@id/btn_skip"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_body" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_skip"
        android:textSize="@dimen/size_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_start_guide" />

</androidx.constraintlayout.widget.ConstraintLayout>